--- a/backend/backend.adoc
+++ b/backend/backend.adoc
@@ -7,7 +7,12 @@
 Description of the backend for the _taboo4_ tagged bookmark service.
 
 
-The whole taboo4 backend is implemented with AWS Lambdas and a DynamoDB. It is set up with use of the  https://servelsess.com[serveless framework]. In this document the short command `sls` is used instead of `serverless`.
+== Technology
+
+The backend is implemented in Amazon AWS using Lambda functions based on a NodeJS 8.10 runtime and DynamoDB as a storage backend. The access to the lambda functions is by an API Gateway. The whole deployment is managed by using the https://serverless.com[serverless framework].  In this document the short command `sls` is used instead of `serverless`.
+
+The Lambda functions are written in Javascript, for the tests _mocha_, _chaijs_ and _sinon_ are used.
+
 
 == Setup
 
